 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Release 0.11.0 (unreleased)

INCOMPATIBLE CHANGES
PIG-1891 Enable StoreFunc to make intelligent decision based on job success or failure (initialcontext via gates)

IMPROVEMENTS

PIG-2943: DevTests, Refactor Windows checks to use new Util.WINDOWS method for code health (jgordon via dvryaboy)

PIG-2794: Pig test: add utils to simplify testing on Windows (jgordon via gates)

PIG-2908: Fix unit tests to work with jdk7 (rohini via dvryaboy)

PIG-2965: RANDOM should allow seed initialization for ease of testing (jcoveney)

PIG-2964: Add helper method getJobList() to PigStats.JobGraph. Extend visibility of couple methods on same class (prkommireddi via billgraham)

PIG-2579: Support for multiple input schemas in AvroStorage (cheolsoo via sms)

PIG-2946: Documentation of "history" and "clear" commands (xalan via azaroth)

PIG-2877: Make SchemaTuple work in foreach (and thus, in loads) (jcoveney)

PIG-2923: Lazily register bags with SpillableMemoryManager (dvryaboy)

PIG-2929: Improve documentation around AVG, CONCAT, MIN, MAX (cheolsoo via billgraham)

PIG-2852: Update documentation regarding parallel local mode execution (cheolsoo via jcoveney)

PIG-2879: Pig current releases lack a UDF startsWith.This UDF tests if a given string starts with the specified prefix. (initialcontext via azaroth)

PIG-2712: Pig does not call OutputCommitter.abortJob() on the underlying OutputFormat (rohini via gates)

PIG-2918: Avoid Spillable bag overhead where possible (dvryaboy)

PIG-2900: Streaming should provide conf settings in the environment (dvryaboy)

PIG-2353: RANK function like in SQL (xalan via azaroth)

PIG-2915: Builtin TOP udf is sensitive to null input bags (hazen via dvryaboy)

PIG-2901: Errors and lacks in document "Pig Latin Basics" (miyakawataku via billgraham)
