@@ -24,6 +24,7 @@ INCOMPATIBLE CHANGES
 PIG-1891 Enable StoreFunc to make intelligent decision based on job success or failure (initialcontext via gates)
 
 IMPROVEMENTS
+PIG-2947: Documentation for Rank operator (xalan via azaroth)
 
 PIG-2943: DevTests, Refactor Windows checks to use new Util.WINDOWS method for code health (jgordon via dvryaboy)
 
